# optiface

./: .coverage  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  default_import.csv  layer_run_28-02-2024--18-54-40.csv  migratecsv.py  pyproject.toml
.github/workflows/: foo.yaml
front/: app.py  app.tcss
optiface/: cli.py  constants.py
optiface/cli/: app.py  app.tcss  bareui.py  pick.py  window.py
optiface/controller/: experimentinterface.py
optiface/core/: featuredata.py  iinstance.py  optidatetime.py  optierror.py  optispace.py
optiface/dbmanager/: dbm.py
optiface/implementer/: optiinit.py  optispace.py
optiface/implementer/knapsack/: instance.py  solution.py  solvers.py
optiface/kernel/: components.py  iinstance.py  isolver.py  solution.py
optiface/ospacemanager/: osm.py
optiface/psm/: psm.py
optiface/service/: api.py  exampleservice.py
optiface/var/: enumtypes.yml
space/aspi/: experiments.db  problemspace.yaml
space/default/: experiments.db
space/defaultproblem/: experiments.db  problemspace.yaml
space/testproblem/: experiments.db  problemspace.yaml
space/testproblem2/: problemspace.yaml
tests/: test_dbmanager.py  test_front.py  test_logger.py  test_optiface.py  test_optispace.py  test_setup.py  testing.py
