[project]
name = "optiface"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Wrabetz",email = "wrabetzluca@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "pytest (>=8.3.4,<9.0.0)",
    "pylint (>=3.3.4,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "textual (>=1.0.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
