[tool.poetry]
name = "optiface"
version = "0.1.0"
description = ""
authors = ["Luca Wrabetz <wrabetzluca@gmail.com>", "Peter Sanders <pete.sanders97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.4"
pylint = "^3.3.4"
black = "^25.1.0"
textual = "^1.0.0"
asyncio = "^3.4.3"
pytest-asyncio = "^0.25.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
