[project]
name = "optiface"
version = "0.1.0"
description = ""
authors = [
        {name = "Luca Wrabetz", email = "wrabetzluca@gmail.com"},
        {name = "Peter Sanders", email = "pete.sanders97@gmail.com"}
        ]
readme = "README.md"

[project.scripts]
optiface = "optiface.cli:run"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.4"
pylint = "^3.3.4"
black = "^25.1.0"
textual = "^1.0.0"
asyncio = "^3.4.3"
pytest-asyncio = "^0.25.3"
pydantic = "^2.10.6"
pyyaml = "^6.0.2"
pysqlite3 = "^0.5.4"
pandas = "^2.2.3"
sqlalchemy = "^2.0.0"
rich = "^14.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.4"
pre-commit = "^4.1.0"
